--- a/my-next-app/src/styles/text.css
+++ b/my-next-app/src/styles/text.css
@@ -3,6 +3,7 @@ html {
   font-size: 14px;
   font-family: var(--font-normal);
   font-weight: var(--normal-font-weight);
+  color: var(--color);
 }
 
 input,
